# Vila-Caiz

./: .gitignore  CHANGELOG.md  README.md  app.py  pyproject.toml  requirements.txt  server.py
app/: __init__.py  cli.py  models.py  services.py  storage.py  web.py
app/templates/: base.html  coaches.html  dashboard.html  finances.html  finances_expense.html  finances_revenue.html  login.html  match_plan_print.html  match_plans.html  member_card.html  members.html  physios.html  players.html  players_manage.html  seasons.html  settings.html  setup.html  treatments.html  users.html  youth.html
templates/: base.html  coaches.html  dashboard.html  finances.html  finances_expense.html  finances_overview.html  finances_revenue.html  members.html  physios.html  players.html  seasons.html  youth.html
